<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingDefaultResource">

    <PreferenceCategory
        app:icon="@drawable/ic_phone_android_black_24dp"
        app:title="@string/control">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="landscape"
            app:title="@string/allow_landscape" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="angle_3d"
            app:title="@string/enable_angle_3d" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="map_rotation"
            app:title="@string/enable_map_rotation" />
    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_map_black_24dp"
        app:title="地图">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="scale_control"
            app:title="@string/show_plotting_scale" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="zoom_controls"
            app:title="@string/show_zoom_button" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="compass"
            app:summary="@string/enable_after_rotate_map"
            app:title="@string/show_compass" />
    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_search_black_24dp"
        app:title="@string/search">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="intelligent_search"
            app:summary="@string/intelligent_search_around"
            app:title="@string/enable_intelligent_search" />
        <Preference
            app:key="search_record"
            app:title="@string/clean_search_record" />
    </PreferenceCategory>

</PreferenceScreen>
