<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingDefaultResource">

    <PreferenceCategory
        app:icon="@drawable/dolphizz_cartoon"
        app:title="@string/about">
        <Preference
            app:icon="@drawable/ic_settings_black_24dp"
            app:key="to_settings"
            app:title="@string/settings" />

        <Preference
            app:icon="@drawable/ic_update_black_24dp"
            app:key="check_update"
            app:title="@string/check_update"
            app:summary="@string/checking_update" />

        <Preference
            app:icon="@drawable/ic_code_black_24dp"
            app:key="sound_code"
            app:title="@string/sound_code"
            app:summary="@string/sound_code_url" />

        <Preference
            app:icon="@drawable/ic_info_black_24dp"
            app:key="contact_me"
            app:title="@string/contact_me"
            app:summary="@string/contact_me_url" />
    </PreferenceCategory>

    <PreferenceCategory>
        <Preference
            app:icon="@drawable/ic_exit_to_app_black_24dp"
            app:key="logout"
            app:title="@string/logout" />
    </PreferenceCategory>

</PreferenceScreen>
