<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_background_lightgray"
            android:padding="6dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/target_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:lines="1"
                    android:ellipsize="end"
                    android:textColor="@color/black"
                    android:text="@string/target_name"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:lines="1"
                    android:ellipsize="end"
                    android:textColor="@color/black"
                    android:text="@string/address"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_gravity="center"
                android:lines="1"
                android:ellipsize="end"
                android:textColor="@color/black"
                android:text="@string/distance"
                android:textSize="14sp" />

            <Button
                android:id="@+id/item_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_gravity="center"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="12dp"
                android:background="@drawable/button_background_skyblue"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/item_button" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/end_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="top|center_horizontal"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:text="@string/no_more" />
</LinearLayout>