<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl_fragment_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.baidu.mapapi.map.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="6dp"
        android:background="@null"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/ib_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:background="@drawable/bt_bg_alpha"
            android:contentDescription="@string/settings"
            android:src="@drawable/ic_settings_gray_30dp" />

        <ImageButton
            android:id="@+id/ib_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:background="@drawable/bt_bg_alpha"
            android:contentDescription="@string/refresh"
            android:src="@drawable/ic_refresh_gray_30dp" />

        <ImageButton
            android:id="@+id/ib_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:background="@drawable/bt_bg_alpha"
            android:contentDescription="@string/location"
            android:src="@drawable/ic_my_location_gray_30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@null"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_select_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg_gray"
            android:orientation="horizontal"
            android:paddingLeft="6dp"
            android:paddingRight="6dp">

            <Button
                android:id="@+id/bt_select_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:background="@null"
                android:text="@string/select_button1"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/bt_select_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:background="@null"
                android:text="@string/select_button2"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/bt_select_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:background="@null"
                android:text="@string/select_button3"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/bt_select_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:background="@null"
                android:text="@string/select_button4"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg_white"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:background="@drawable/et_bg"
                android:hint="@string/search_hint"
                android:importantForAutofill="no"
                android:inputType="none"
                android:maxLength="42"
                android:padding="9dp"
                android:paddingEnd="42dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <ImageButton
                android:id="@+id/ib_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="-42dp"
                android:background="@null"
                android:contentDescription="@string/expand"
                android:src="@drawable/ic_cancel_gray_30dp"
                android:visibility="invisible"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/bt_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:background="@drawable/bt_bg_colorful"
                android:text="@string/search_button"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/ib_search_expand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:layout_marginRight="3dp"
                android:background="@null"
                android:contentDescription="@string/expand"
                android:src="@drawable/ic_expand_less_black_30dp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_search_drawer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:background="@drawable/layout_bg_white">

            <include
                android:id="@+id/include_search_loading"
                layout="@layout/include_loading_progressbar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_search_result"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_search_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg_lightgray"
            android:padding="3dp">

            <include
                android:id="@+id/include_search_info_loading"
                layout="@layout/include_loading_progressbar" />

            <ScrollView
                android:id="@+id/sv_search_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_search_target_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:enabled="true"
                        android:focusable="true"
                        android:longClickable="true"
                        android:text="@string/target_name"
                        android:textColor="@color/black"
                        android:textIsSelectable="true"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_search_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:enabled="true"
                        android:focusable="true"
                        android:longClickable="true"
                        android:text="@string/address"
                        android:textColor="@color/black"
                        android:textIsSelectable="true"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_search_distance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:enabled="true"
                        android:focusable="true"
                        android:gravity="end"
                        android:longClickable="true"
                        android:text="@string/distance"
                        android:textColor="@color/black"
                        android:textIsSelectable="true"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_search_others"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:enabled="true"
                        android:focusable="true"
                        android:longClickable="true"
                        android:text="@string/others"
                        android:textColor="@color/black"
                        android:textIsSelectable="true"
                        android:textSize="16sp" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_scheme_drawer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:background="@drawable/layout_bg_white">

            <include
                android:id="@+id/include_scheme_loading"
                layout="@layout/include_loading_progressbar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_scheme_result"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_scheme_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:background="@drawable/layout_bg_lightgray">

            <ScrollView
                android:id="@+id/sv_scheme_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/tv_scheme_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:enabled="true"
                    android:focusable="true"
                    android:longClickable="true"
                    android:text="@string/scheme_info"
                    android:textColor="@color/black"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_start_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg_lightgray"
            android:orientation="horizontal"
            android:padding="6dp">

            <Button
                android:id="@+id/bt_return"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="18dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/bt_bg_seablue"
                android:text="@string/return_button"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/bt_middle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/bt_bg_skyblue"
                android:text="@string/middle_button1"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/bt_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/bt_bg_deepblue"
                android:text="@string/start_button"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>