<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_background_lightgray"
                    android:padding="12dp">
                    <TextView
                        android:id="@+id/simple_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:textColor="@color/black"
                        android:text="@string/simple_info"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:id="@+id/info_drawer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/detail_info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:textColor="@color/black"
                            android:text="@string/detail_info"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <ImageButton
            android:id="@+id/scheme_expand"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@null"
            android:src="@drawable/ic_expand_more_black_24dp"
            android:contentDescription="@string/expand" />
    </LinearLayout>

    <TextView
        android:id="@+id/end_text"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="top|center_horizontal"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:text="@string/no_more" />
</LinearLayout>